add more description

--- a/demo/quant/quant_post/image_classification_post_training_quantization_quick_start.ipynb
+++ b/demo/quant/quant_post/image_classification_post_training_quantization_quick_start.ipynb
@@ -64,6 +64,7 @@
    "metadata": {},
    "source": [
     "## 3. 训练模型\n",
+    "该章节介绍了如何定义输入数据和如何训练和测试分类模型。先训练分类模型的原因是离线量化需要一个训练好的模型。\n",
     "\n",
     "### 3.1 定义输入数据\n",
     "\n",
@@ -90,7 +91,7 @@
    "metadata": {},
    "source": [
     "### 3.2 训练和测试\n",
-    "先定义训练和测试函数"
+    "先定义训练和测试函数。在训练函数中执行了一个epoch的训练，因为MNIST数据集数据较少，一个epoch就可将top1精度训练到95%以上。\n"
    ]
   },
   {
@@ -124,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "训练分类网络"
+    "调用``train``函数训练分类网络，``train_program``是在第2步：构建网络中定义的。"
    ]
   },
   {
@@ -136,11 +137,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('train', 0.109375, 0.5625, 2.6159298)\n",
-      "('train', 0.953125, 1.0, 0.18042225)\n",
-      "('train', 0.9609375, 1.0, 0.15906152)\n",
-      "('train', 0.96875, 0.9921875, 0.1544011)\n",
-      "('train', 0.9609375, 1.0, 0.12998523)\n"
+      "('train', 0.0625, 0.5234375, 2.6373053)\n",
+      "('train', 0.9375, 0.9921875, 0.20106347)\n",
+      "('train', 0.953125, 1.0, 0.13234669)\n",
+      "('train', 0.96875, 0.9921875, 0.18056682)\n",
+      "('train', 0.9453125, 1.0, 0.15847622)\n"
      ]
     }
    ],
@@ -152,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "测试分类网络"
+    "调用``test``函数测试分类网络，``val_program``是在第2步：构建网络中定义的。"
    ]
   },
   {
@@ -164,12 +165,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('test', 0.9453125, 1.0, 0.15452775)\n",
-      "('test', 0.9609375, 1.0, 0.081429556)\n",
-      "('test', 0.9921875, 1.0, 0.05349218)\n",
-      "('test', 0.9609375, 1.0, 0.14042228)\n",
-      "('test', 0.9375, 1.0, 0.20278816)\n",
-      "('final test result', 0.9669638, 0.998965)\n"
+      "('test', 0.9609375, 0.9921875, 0.12996897)\n",
+      "('test', 0.9609375, 1.0, 0.094265014)\n",
+      "('test', 0.9453125, 1.0, 0.10511534)\n",
+      "('test', 0.9765625, 1.0, 0.11341806)\n",
+      "('test', 0.953125, 1.0, 0.17046008)\n",
+      "('final test result', 0.9647603, 0.99943244)\n"
      ]
     }
    ],
@@ -181,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "保存inference model"
+    "保存inference model，将训练好的分类模型保存在``'./inference_model'``下，后续进行离线量化时将加载保存在此处的模型。"
    ]
   },
   {
@@ -217,28 +218,30 @@
    "source": [
     "## 4. 离线量化\n",
     "\n",
-    "使用10个batch的数据进行参数校正"
+    "调用离线量化接口，加载文件夹``'./inference_model'``训练好的分类模型，并使用10个batch的数据进行参数校正。此过程无需训练，只需跑前向过程来计算量化所需参数。离线量化后的模型保存在文件夹``'./quant_post_model'``下。"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-02-05 03:33:41,164-INFO: run batch: 0\n",
-      "2020-02-05 03:33:41,164-INFO: run batch: 0\n",
-      "2020-02-05 03:33:41,452-INFO: run batch: 5\n",
-      "2020-02-05 03:33:41,452-INFO: run batch: 5\n",
-      "2020-02-05 03:33:41,582-INFO: all run batch: 10\n",
-      "2020-02-05 03:33:41,582-INFO: all run batch: 10\n",
-      "2020-02-05 03:33:41,585-INFO: calculate scale factor ...\n",
-      "2020-02-05 03:33:41,585-INFO: calculate scale factor ...\n",
-      "2020-02-05 03:33:53,840-INFO: update the program ...\n",
-      "2020-02-05 03:33:53,840-INFO: update the program ...\n"
+      "2020-02-06 09:32:42,944-INFO: run batch: 0\n",
+      "2020-02-06 09:32:42,944-INFO: run batch: 0\n",
+      "2020-02-06 09:32:43,233-INFO: run batch: 5\n",
+      "2020-02-06 09:32:43,233-INFO: run batch: 5\n",
+      "2020-02-06 09:32:43,362-INFO: all run batch: 10\n",
+      "2020-02-06 09:32:43,362-INFO: all run batch: 10\n",
+      "2020-02-06 09:32:43,365-INFO: calculate scale factor ...\n",
+      "2020-02-06 09:32:43,365-INFO: calculate scale factor ...\n",
+      "2020-02-06 09:32:54,841-INFO: update the program ...\n",
+      "2020-02-06 09:32:54,841-INFO: update the program ...\n"
      ]
     }
    ],
@@ -255,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "加载量化后的模型进行测试"
+    "加载保存在文件夹``'./quant_post_model'``下的量化后的模型进行测试，可看到精度和``3.2 训练和测试``中得到的测试精度相近，因此离线量化过程对于此分类模型几乎无损。"
    ]
   },
   {
@@ -267,12 +270,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('test', 0.9375, 1.0, 0.18027544)\n",
-      "('test', 0.984375, 1.0, 0.085289225)\n",
-      "('test', 0.984375, 1.0, 0.05745204)\n",
-      "('test', 0.9609375, 0.9921875, 0.13197306)\n",
-      "('test', 0.9375, 1.0, 0.22449243)\n",
-      "('final test result', 0.96285725, 0.9987814)\n"
+      "('test', 0.9765625, 0.9921875, 0.11411239)\n",
+      "('test', 0.953125, 1.0, 0.111179784)\n",
+      "('test', 0.953125, 1.0, 0.101078615)\n",
+      "('test', 0.96875, 1.0, 0.0993958)\n",
+      "('test', 0.9609375, 1.0, 0.16066414)\n",
+      "('final test result', 0.9643096, 0.99931556)\n"
      ]
     }
    ],
