--- a/demo/quant/quant_aware/image_classification_training_aware_quantization_quick_start.ipynb
+++ b/demo/quant/quant_aware/image_classification_training_aware_quantization_quick_start.ipynb
@@ -17,7 +17,8 @@
     "2. 构建模型\n",
     "3. 训练模型\n",
     "4. 量化\n",
-    "5. 训练和测试量化后的模型"
+    "5. 训练和测试量化后的模型\n",
+    "6. 保存量化后的模型"
    ]
   },
   {
@@ -65,6 +66,7 @@
    "metadata": {},
    "source": [
     "## 3. 训练模型\n",
+    "该章节介绍了如何定义输入数据和如何训练和测试分类模型。先训练分类模型的原因是量化训练过程是在训练好的模型上进行的，也就是说是在训练好的模型的基础上加入量化反量化op之后，用小学习率进行参数微调。\n",
     "\n",
     "### 3.1 定义输入数据\n",
     "\n",
@@ -91,7 +93,7 @@
    "metadata": {},
    "source": [
     "### 3.2 训练和测试\n",
-    "先定义训练和测试函数"
+    "先定义训练和测试函数，正常训练和量化训练时只需要调用函数即可。在训练函数中执行了一个epoch的训练，因为MNIST数据集数据较少，一个epoch就可将top1精度训练到95%以上。"
    ]
   },
   {
@@ -105,7 +107,7 @@
     "    for data in train_reader():\n",
     "        acc1, acc5, loss = exe.run(prog, feed=train_feeder.feed(data), fetch_list=outputs)\n",
     "        if iter % 100 == 0:\n",
-    "            print('train', acc1.mean(), acc5.mean(), loss.mean())\n",
+    "            print('train iter={}, top1={}, top5={}, loss={}'.format(iter, acc1.mean(), acc5.mean(), loss.mean()))\n",
     "        iter += 1\n",
     "        \n",
     "def test(prog):\n",
@@ -114,18 +116,18 @@
     "    for data in train_reader():\n",
     "        acc1, acc5, loss = exe.run(prog, feed=train_feeder.feed(data), fetch_list=outputs)\n",
     "        if iter % 100 == 0:\n",
-    "            print('test', acc1.mean(), acc5.mean(), loss.mean())\n",
+    "            print('test iter={}, top1={}, top5={}, loss={}'.format(iter, acc1.mean(), acc5.mean(), loss.mean()))\n",
     "        res[0].append(acc1.mean())\n",
     "        res[1].append(acc5.mean())\n",
     "        iter += 1\n",
-    "    print('final test result', np.array(res[0]).mean(), np.array(res[1]).mean())"
+    "    print('final test result top1={}, top5={}'.format(np.array(res[0]).mean(), np.array(res[1]).mean()))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "训练分类网络"
+    "调用``train``函数训练分类网络，``train_program``是在第2步：构建网络中定义的。"
    ]
   },
   {
@@ -137,11 +139,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('train', 0.0703125, 0.4765625, 2.7081475)\n",
-      "('train', 0.9296875, 1.0, 0.2265962)\n",
-      "('train', 0.953125, 1.0, 0.18551664)\n",
-      "('train', 0.9609375, 0.9921875, 0.1773298)\n",
-      "('train', 0.953125, 1.0, 0.1571356)\n"
+      "train iter=0, top1=0.1171875, top5=0.546875, loss=2.79680204391\n",
+      "train iter=100, top1=0.9296875, top5=1.0, loss=0.305284500122\n",
+      "train iter=200, top1=0.9609375, top5=0.9921875, loss=0.158525630832\n",
+      "train iter=300, top1=0.9609375, top5=0.9921875, loss=0.146427512169\n",
+      "train iter=400, top1=0.9609375, top5=1.0, loss=0.179066047072\n"
      ]
     }
    ],
@@ -153,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "测试分类网络"
+    "调用``test``函数测试分类网络，``val_program``是在第2步：构建网络中定义的。"
    ]
   },
   {
@@ -165,12 +167,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('test', 0.9609375, 1.0, 0.09948365)\n",
-      "('test', 0.96875, 1.0, 0.06669818)\n",
-      "('test', 0.96875, 1.0, 0.067689285)\n",
-      "('test', 0.9765625, 1.0, 0.061369315)\n",
-      "('test', 0.953125, 1.0, 0.14121476)\n",
-      "('final test result', 0.971855, 0.9992822)\n"
+      "test iter=0, top1=0.96875, top5=1.0, loss=0.0801232308149\n",
+      "test iter=100, top1=0.9609375, top5=1.0, loss=0.104892581701\n",
+      "test iter=200, top1=0.96875, top5=1.0, loss=0.156774014235\n",
+      "test iter=300, top1=0.984375, top5=1.0, loss=0.0931615754962\n",
+      "test iter=400, top1=0.9453125, top5=1.0, loss=0.184863254428\n",
+      "final test result top1=0.970469415188, top5=0.999282181263\n"
      ]
     }
    ],
@@ -184,7 +186,7 @@
    "source": [
     "## 4. 量化\n",
     "\n",
-    "按照默认配置在``train_program``和``val_program``中加入量化和反量化op."
+    "按照[默认配置](https://paddlepaddle.github.io/PaddleSlim/api/quantization_api/#_1)在``train_program``和``val_program``中加入量化和反量化op."
    ]
   },
   {
@@ -196,8 +198,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-02-05 02:51:45,543-INFO: quant_aware config {'moving_rate': 0.9, 'weight_quantize_type': 'channel_wise_abs_max', 'is_full_quantize': False, 'dtype': 'int8', 'weight_bits': 8, 'window_size': 10000, 'activation_bits': 8, 'quantize_op_types': ['conv2d', 'depthwise_conv2d', 'mul'], 'not_quant_pattern': ['skip_quant'], 'activation_quantize_type': 'moving_average_abs_max', 'for_tensorrt': False}\n",
-      "2020-02-05 02:51:46,960-INFO: quant_aware config {'moving_rate': 0.9, 'weight_quantize_type': 'channel_wise_abs_max', 'is_full_quantize': False, 'dtype': 'int8', 'weight_bits': 8, 'window_size': 10000, 'activation_bits': 8, 'quantize_op_types': ['conv2d', 'depthwise_conv2d', 'mul'], 'not_quant_pattern': ['skip_quant'], 'activation_quantize_type': 'moving_average_abs_max', 'for_tensorrt': False}\n"
+      "2020-02-06 09:08:49,489-INFO: quant_aware config {'moving_rate': 0.9, 'weight_quantize_type': 'channel_wise_abs_max', 'is_full_quantize': False, 'dtype': 'int8', 'weight_bits': 8, 'window_size': 10000, 'activation_bits': 8, 'quantize_op_types': ['conv2d', 'depthwise_conv2d', 'mul'], 'not_quant_pattern': ['skip_quant'], 'activation_quantize_type': 'moving_average_abs_max', 'for_tensorrt': False}\n",
+      "2020-02-06 09:08:50,943-INFO: quant_aware config {'moving_rate': 0.9, 'weight_quantize_type': 'channel_wise_abs_max', 'is_full_quantize': False, 'dtype': 'int8', 'weight_bits': 8, 'window_size': 10000, 'activation_bits': 8, 'quantize_op_types': ['conv2d', 'depthwise_conv2d', 'mul'], 'not_quant_pattern': ['skip_quant'], 'activation_quantize_type': 'moving_average_abs_max', 'for_tensorrt': False}\n"
      ]
     }
    ],
@@ -211,23 +213,25 @@
    "metadata": {},
    "source": [
     "## 5. 训练和测试量化后的模型\n",
-    "训练"
+    "微调量化后的模型，训练一个epoch后测试。"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('train', 0.9453125, 1.0, 0.15119126)\n",
-      "('train', 0.984375, 1.0, 0.04564587)\n",
-      "('train', 0.96875, 1.0, 0.10310037)\n",
-      "('train', 0.984375, 1.0, 0.070371866)\n",
-      "('train', 0.9609375, 1.0, 0.12202865)\n"
+      "train iter=0, top1=0.953125, top5=1.0, loss=0.184170544147\n",
+      "train iter=100, top1=0.96875, top5=1.0, loss=0.0945074558258\n",
+      "train iter=200, top1=0.9765625, top5=1.0, loss=0.0915599390864\n",
+      "train iter=300, top1=0.9765625, top5=1.0, loss=0.0562560297549\n",
+      "train iter=400, top1=0.9609375, top5=1.0, loss=0.094195574522\n"
      ]
     }
    ],
@@ -239,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "测试"
+    "测试量化后的模型，和``3.2 训练和测试``中得到的测试结果相比，精度相近，达到了无损量化。"
    ]
   },
   {
@@ -251,12 +255,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('test', 0.984375, 1.0, 0.038413208)\n",
-      "('test', 0.9765625, 1.0, 0.045030694)\n",
-      "('test', 0.984375, 1.0, 0.043231864)\n",
-      "('test', 0.984375, 1.0, 0.05136764)\n",
-      "('test', 0.9765625, 1.0, 0.122583434)\n",
-      "('final test result', 0.98505944, 0.999783)\n"
+      "test iter=0, top1=0.984375, top5=1.0, loss=0.0542894415557\n",
+      "test iter=100, top1=0.9609375, top5=1.0, loss=0.0662319809198\n",
+      "test iter=200, top1=0.9609375, top5=1.0, loss=0.0832970961928\n",
+      "test iter=300, top1=0.9921875, top5=1.0, loss=0.0262515246868\n",
+      "test iter=400, top1=0.96875, top5=1.0, loss=0.123742781579\n",
+      "final test result top1=0.984057843685, top5=0.999799668789\n"
      ]
     }
    ],
@@ -265,11 +269,53 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 6. 保存量化后的模型\n",
+    "\n",
+    "在``4. 量化``中使用接口``slim.quant.quant_aware``接口得到的模型只适合训练时使用，为了得到最终使用时的模型，需要使用[slim.quant.convert](https://paddlepaddle.github.io/PaddleSlim/api/quantization_api/#convert)接口，然后使用[fluid.io.save_inference_model](https://www.paddlepaddle.org.cn/documentation/docs/zh/develop/api_cn/io_cn/save_inference_model_cn.html#save-inference-model)保存模型。``float_prog``的参数数据类型是float32，但是数据范围是int8, 保存之后可使用fluid或者paddle-lite加载使用，paddle-lite在使用时，会先将类型转换为int8。``int8_prog``的参数数据类型是int8, 保存后可看到量化后模型大小，不可加载使用。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2020-02-06 09:09:27,529-INFO: convert config {'moving_rate': 0.9, 'weight_quantize_type': 'channel_wise_abs_max', 'is_full_quantize': False, 'dtype': 'int8', 'weight_bits': 8, 'window_size': 10000, 'activation_bits': 8, 'quantize_op_types': ['conv2d', 'depthwise_conv2d', 'mul'], 'not_quant_pattern': ['skip_quant'], 'activation_quantize_type': 'moving_average_abs_max', 'for_tensorrt': False}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[u'save_infer_model/scale_0',\n",
+       " u'save_infer_model/scale_1',\n",
+       " u'save_infer_model/scale_2']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float_prog, int8_prog = slim.quant.convert(val_quant_program, exe.place, save_int8=True)\n",
+    "target_vars = [float_prog.global_block().var(name) for name in outputs]\n",
+    "fluid.io.save_inference_model(dirname='./inference_model/float',\n",
+    "        feeded_var_names=[var.name for var in inputs],\n",
+    "        target_vars=target_vars,\n",
+    "        executor=exe,\n",
+    "        main_program=float_prog)\n",
+    "fluid.io.save_inference_model(dirname='./inference_model/int8',\n",
+    "        feeded_var_names=[var.name for var in inputs],\n",
+    "        target_vars=target_vars,\n",
+    "        executor=exe,\n",
+    "        main_program=int8_prog)"
+   ]
   }
  ],
  "metadata": {
