--- a/demo/distillation/image_classification_distillation_tutorial.ipynb
+++ b/demo/distillation/image_classification_distillation_tutorial.ipynb
@@ -165,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_reader = paddle.batch(\n",
+    "train_reader = paddle.io.batch(\n",
     "    paddle.dataset.mnist.train(), batch_size=128, drop_last=True)\n",
     "train_feeder = fluid.DataFeeder(['image', 'label'], fluid.CPUPlace(), student_program)"
    ]
