--- a/demo/nas/image_classification_nas_quick_start.ipynb
+++ b/demo/nas/image_classification_nas_quick_start.ipynb
@@ -114,9 +114,9 @@
     "    if current_flops > 321208544:\n",
     "        continue\n",
     "    \n",
-    "    train_reader = paddle.io.batch(paddle.reader.shuffle(paddle.dataset.cifar.train10(cycle=False),                          buf_size=1024),batch_size=256)\n",
+    "    train_reader = paddle.fluid.io.batch(paddle.reader.shuffle(paddle.dataset.cifar.train10(cycle=False),                          buf_size=1024),batch_size=256)\n",
     "    train_feeder = fluid.DataFeeder(inputs, fluid.CPUPlace())\n",
-    "    test_reader = paddle.io.batch(paddle.dataset.cifar.test10(cycle=False),\n",
+    "    test_reader = paddle.fluid.io.batch(paddle.dataset.cifar.test10(cycle=False),\n",
     "               batch_size=256)\n",
     "    test_feeder = fluid.DataFeeder(inputs, fluid.CPUPlace())\n",
     "\n",
