--- a/docs/zh_cn/tutorials/sanas_darts_space.ipynb
+++ b/docs/zh_cn/tutorials/sanas_darts_space.ipynb
@@ -264,8 +264,8 @@
     }
    ],
    "source": [
-    "train_reader = paddle.io.batch(paddle.reader.shuffle(paddle.dataset.cifar.train10(cycle=False), buf_size=1024), batch_size=BATCH_SIZE, drop_last=True)\n",
-    "test_reader = paddle.io.batch(paddle.dataset.cifar.test10(cycle=False), batch_size=BATCH_SIZE, drop_last=False)\n",
+    "train_reader = paddle.fluid.io.batch(paddle.reader.shuffle(paddle.dataset.cifar.train10(cycle=False), buf_size=1024), batch_size=BATCH_SIZE, drop_last=True)\n",
+    "test_reader = paddle.fluid.io.batch(paddle.dataset.cifar.test10(cycle=False), batch_size=BATCH_SIZE, drop_last=False)\n",
     "train_loader.set_sample_list_generator(train_reader, places=place)\n",
     "test_loader.set_sample_list_generator(test_reader, places=place)"
    ]
