Rename paddle.batch to paddle.io.batch (#290)

--- a/demo/prune/image_classification_pruning_quick_start.ipynb
+++ b/demo/prune/image_classification_pruning_quick_start.ipynb
@@ -161,7 +161,7 @@
    "outputs": [],
    "source": [
     "import paddle.dataset.mnist as reader\n",
-    "train_reader = paddle.batch(\n",
+    "train_reader = paddle.fluid.io.batch(\n",
     "        reader.train(), batch_size=128, drop_last=True)\n",
     "train_feeder = fluid.DataFeeder(inputs, fluid.CPUPlace())"
    ]
