--- a/demo/sensitive/image_classification_sensitivity_analysis.ipynb
+++ b/demo/sensitive/image_classification_sensitivity_analysis.ipynb
@@ -73,9 +73,9 @@
    "outputs": [],
    "source": [
     "import paddle.dataset.mnist as reader\n",
-    "train_reader = paddle.batch(\n",
+    "train_reader = paddle.fluid.io.batch(\n",
     "        reader.train(), batch_size=128, drop_last=True)\n",
-    "test_reader = paddle.batch(\n",
+    "test_reader = paddle.fluid.io.batch(\n",
     "        reader.test(), batch_size=128, drop_last=True)\n",
     "data_feeder = fluid.DataFeeder(inputs, place)"
    ]
