--- a/docs/zh_cn/tutorials/image_classification_nas_quick_start.ipynb
+++ b/docs/zh_cn/tutorials/image_classification_nas_quick_start.ipynb
@@ -128,9 +128,9 @@
    "outputs": [],
    "source": [
     "def input_data(inputs):\n",
-    "    train_reader = paddle.batch(paddle.reader.shuffle(paddle.dataset.cifar.train10(cycle=False), buf_size=1024),batch_size=256)\n",
+    "    train_reader = paddle.fluid.io.batch(paddle.reader.shuffle(paddle.dataset.cifar.train10(cycle=False), buf_size=1024),batch_size=256)\n",
     "    train_feeder = fluid.DataFeeder(inputs, fluid.CPUPlace())\n",
-    "    eval_reader = paddle.batch(paddle.dataset.cifar.test10(cycle=False), batch_size=256)\n",
+    "    eval_reader = paddle.fluid.io.batch(paddle.dataset.cifar.test10(cycle=False), batch_size=256)\n",
     "    eval_feeder = fluid.DataFeeder(inputs, fluid.CPUPlace())\n",
     "    return train_reader, train_feeder, eval_reader, eval_feeder"
    ]
