--- a/demo/quant/quant_post/image_classification_post_training_quantization_quick_start.ipynb
+++ b/demo/quant/quant_post/image_classification_post_training_quantization_quick_start.ipynb
@@ -79,9 +79,9 @@
    "outputs": [],
    "source": [
     "import paddle.dataset.mnist as reader\n",
-    "train_reader = paddle.batch(\n",
+    "train_reader = paddle.fluid.io.batch(\n",
     "        reader.train(), batch_size=128, drop_last=True)\n",
-    "test_reader = paddle.batch(\n",
+    "test_reader = paddle.fluid.io.batch(\n",
     "        reader.train(), batch_size=128, drop_last=True)\n",
     "train_feeder = fluid.DataFeeder(inputs, fluid.CPUPlace())"
    ]
