fix load inference in quant_post demo

--- a/demo/quant/quant_post/image_classification_post_training_quantization_quick_start.ipynb
+++ b/demo/quant/quant_post/image_classification_post_training_quantization_quick_start.ipynb
@@ -282,6 +282,8 @@
    "source": [
     "quant_post_prog, feed_target_names, fetch_targets = fluid.io.load_inference_model(\n",
     "        dirname='./quant_post_model',\n",
+    "        model_filename='__model__',\n",
+    "        params_filename='__params__',\n",
     "        executor=exe)\n",
     "test(quant_post_prog, fetch_targets)"
    ]
