depracate convert save_int8 interface

--- a/demo/quant/quant_aware/image_classification_training_aware_quantization_quick_start.ipynb
+++ b/demo/quant/quant_aware/image_classification_training_aware_quantization_quick_start.ipynb
@@ -303,18 +303,13 @@
     }
    ],
    "source": [
-    "float_prog, int8_prog = slim.quant.convert(val_quant_program, exe.place, save_int8=True)\n",
+    "qat_prog, _ = slim.quant.convert(val_quant_program, exe.place)\n",
     "target_vars = [float_prog.global_block().var(name) for name in outputs]\n",
     "fluid.io.save_inference_model(dirname='./inference_model/float',\n",
     "        feeded_var_names=[var.name for var in inputs],\n",
     "        target_vars=target_vars,\n",
     "        executor=exe,\n",
-    "        main_program=float_prog)\n",
-    "fluid.io.save_inference_model(dirname='./inference_model/int8',\n",
-    "        feeded_var_names=[var.name for var in inputs],\n",
-    "        target_vars=target_vars,\n",
-    "        executor=exe,\n",
-    "        main_program=int8_prog)"
+    "        main_program=qat_prog)\n",
    ]
   }
  ],
